--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
             android:title="@string/menu_pokemon" />
         <item
             android:id="@+id/nav_favoritos"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@android:drawable/btn_star"
             android:title="@string/menu_favoritos" />
     </group>
 </menu>
