Parte 2 punto 18 Parte 3 punto 26 todo: los swiper estan sin hacer, revisar desde la parte 2 por si falta codigo.

--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -7,7 +7,12 @@
     tools:context=".ui.favoritos.FavoritosFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPokemons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_pokemon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
