--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -29,8 +29,7 @@
             app:layout_constraintBottom_toTopOf="@+id/ivPokemon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Pikachu" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/ivPokemon"
@@ -42,7 +41,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvNombre"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/img_alakazam" />
 
         <TextView
             android:id="@+id/tvFecha"
@@ -54,7 +53,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ivPokemon"
             app:layout_constraintStart_toStartOf="@+id/ivPokemon"
-            app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
-            tools:text="20/02/2022" />
+            app:layout_constraintTop_toBottomOf="@+id/ivPokemon" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
