--- a/app/src/main/res/layout/fragment_ver_pokemon.xml
+++ b/app/src/main/res/layout/fragment_ver_pokemon.xml
@@ -30,5 +30,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvVerNombrePokemon"
-        tools:src="@tools:sample/avatars" />
+        tools:src="@drawable/img_alakazam" />
 </androidx.constraintlayout.widget.ConstraintLayout>
