--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -54,5 +54,16 @@
             app:layout_constraintEnd_toEndOf="@+id/ivPokemon"
             app:layout_constraintStart_toStartOf="@+id/ivPokemon"
             app:layout_constraintTop_toBottomOf="@+id/ivPokemon" />
+
+        <ImageView
+            android:id="@+id/ivStar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/ivPokemon"
+            app:layout_constraintEnd_toStartOf="@+id/ivPokemon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvNombre"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
